# blood-report-assistant

./: README.md  environment.yml  pyproject.toml
src/blood_sample_agent/: crew.py  main.py
src/blood_sample_agent/config/: agents.yaml  tasks.yaml
src/blood_sample_agent/db/: chroma.sqlite3
