[tool.poetry]
name = "blood_sample_agent"
version = "0.1.0"
description = "blood_sample_agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
blood_sample_agent = "blood_sample_agent.main:run"
run_crew = "blood_sample_agent.main:run"
train = "blood_sample_agent.main:train"
replay = "blood_sample_agent.main:replay"
test = "blood_sample_agent.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
